# PlainTextTerminal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-release-by-tag-creation.yml
src/PlainTextTerminal/: AbstractTerminal.py  PlainTextTerminal.py  SSHBackend.py  TelnetBackend.py  __init__.py
